# MIRROR-Eval

./: .gitignore  README.md  demo.py  environment.yml  mta_model_responses.jsonl  mta_results.jsonl  pyproject.toml  requirements-dev.txt  requirements.txt  settings-local.toml  settings.full_context.toml  settings.isolated_turn.toml  settings.toml
docs/: contribution-instructions.md  datasets.md  general.md  todo.md
docs/benchmarks/: creativity.md  example.md  mqm.md  multiturn-accuracy.md
notebooks/: compute_scores_dev.ipynb  create_dataset.ipynb  pairs_browser.html  run_other_metrics_temp.ipynb
src/mirror_eval/: __init__.py  evaluate.py
src/mirroreval/: call_hf_model.py  config.py  creativity.py  evaluate.py  hf_utilities.py  logger.py  partner.py  slurm_utilities.py
src/mirroreval/benchmarks/: __init__.py  interfaces.py
src/mirroreval/benchmarks/creativity/: __init__.py  creativity_analysis.py  creativity_benchmark.py  creativity_datasets.py  creativity_embedding_model.py  creativity_entrypoint.py  creativity_message_processing.py  creativity_metrics.py  creativity_simulate_conversation.py
src/mirroreval/benchmarks/mqm/: mqm_benchmark.py  mqm_datasets.py  mqm_entrypoint.py  mqm_metrics.py
src/mirroreval/benchmarks/mta/: mta_analysis.py  mta_benchmark.py  mta_datasets.py  mta_entrypoint.py  mta_metrics.py  mta_probes.py  mta_simulate_conversation.py  (+1 more)
src/mirroreval/creativity/: creativity_entrypoint.py  creativity_metric.py  prompts.py
src/mirroreval/creativity_development/: compute_scores.py  creativity_analysis.py  creativity_benchmark.py  creativity_datasets.py  creativity_entrypoint.py  creativity_metrics.py
src/mirroreval/slurm_templates/: template.sh.j2
tests/: __init__.py  test_creativity_benchmark.py  test_evaluate.py
utility_scripts/: upload_to_hf_dataset.py
(+6 files in other folders)
